# Pipe-R

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_BUILD_INSTRUCTIONS.md  DECK.bat  KENAI_START.bat  KENAI_STOP.bat  KENAI_v1.bat  KENAI_v3.bat  KENAI_v4.bat  NEST.bat  PIPE-R.bat  README.md  START.bat  STOP.bat  dev log 2.txt  hub.js  netlify.toml  pipe-r.html  remote.html  server.js
Desktop/FORGE-main/: .env.example  .gitignore  CLAUDE.md  DEPLOY.bat  MEMORY.md  Modelfile  README.md  SETUP.bat  START-CLI.bat  START.bat  TRAIN.bat  build-exe.bat  netlify.toml  pyproject.toml  requirements.txt
Desktop/FORGE-main/.claude/: settings.local.json
Desktop/FORGE-main/.forgeagent/: AGENT.md
Desktop/FORGE-main/datasets/: grok-sample-10.jsonl
Desktop/FORGE-main/datasets/import/: DROP_FILES_HERE.txt  tool-mastery-100.jsonl
Desktop/FORGE-main/forgeagent/: __init__.py  __main__.py  config.py  launcher.py
Desktop/FORGE-main/forgeagent/buddy/: buddy.py
Desktop/FORGE-main/forgeagent/commands/: registry.py
Desktop/FORGE-main/forgeagent/core/: interfaces.py  iteration.py  project_worker.py  query_engine.py  skills.py
Desktop/FORGE-main/forgeagent/deploy/: agent_deployer.py  agent_instructions.py  instance_manager.py  project_profile.py  templates.py
Desktop/FORGE-main/forgeagent/memory/: session_store.py
Desktop/FORGE-main/forgeagent/remote/: __init__.py  server.py
Desktop/FORGE-main/forgeagent/tools/: registry.py
Desktop/FORGE-main/forgeagent/training/: dataset_manager.py  evaluator.py  model_builder.py  web_scraper.py
Desktop/FORGE-main/public/: index.html
(+539 files in other folders)
